objects/Approval_Threshold__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <label>Approval Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lower_Bound_Percent__c</fullName>
        <label>Lower Bound</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Approval Thresholds</relationshipLabel>
        <relationshipName>Approval_Thresholds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Threshold_Type__c</fullName>
        <label>Threshold Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discount</fullName>
                    <default>true</default>
                    <label>Discount</label>
                </value>
                <value>
                    <fullName>Margin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upper_Bound_Percent__c</fullName>
        <label>Upper Bound</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Approval Threshold</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approval_Level__c</columns>
        <columns>Lower_Bound_Percent__c</columns>
        <columns>Product__c</columns>
        <columns>Threshold_Type__c</columns>
        <columns>Upper_Bound_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Z-{00000}</displayFormat>
        <label>Approval Threshold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Thresholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>